--- a/Volunteer-Connect/Base.lproj/Main.storyboard
+++ b/Volunteer-Connect/Base.lproj/Main.storyboard
@@ -36,8 +36,8 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DbO-sP-ryn">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DbO-sP-ryn">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Volunteer-Connect" id="7uG-mV-wYB"/>
                                 </items>
@@ -101,8 +101,8 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Area of Interest" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2fX-sZ-DVF">
-                                <rect key="frame" x="101" y="54" width="172" height="32.5"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Area of Interest" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2fX-sZ-DVF">
+                                <rect key="frame" x="101" y="64" width="172" height="32.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="2fX-sZ-DVF" secondAttribute="height" multiplier="211:40" id="Sfq-FH-kr9"/>
                                     <constraint firstAttribute="width" secondItem="2fX-sZ-DVF" secondAttribute="height" multiplier="39:7" id="ocr-4e-9hL"/>
@@ -161,8 +161,8 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H2H-IS-VNV">
-                                <rect key="frame" x="0.0" y="-6" width="375" height="44"/>
+                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H2H-IS-VNV">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Search Parameters" id="klV-eg-AZ3">
                                         <barButtonItem key="leftBarButtonItem" title="Back" id="fBO-om-Qmy">
@@ -211,12 +211,6 @@
                                     <segment title="12"/>
                                 </segments>
                             </segmentedControl>
-                            <pickerView clipsSubviews="YES" contentMode="center" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EME-Az-Ab4">
-                                <rect key="frame" x="68" y="84" width="238" height="180"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="EME-Az-Ab4" secondAttribute="height" multiplier="61:53" id="1ly-fy-a46"/>
-                                </constraints>
-                            </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P7F-e6-11e">
                                 <rect key="frame" x="76" y="617" width="222" height="30"/>
                                 <state key="normal" title="Press to Start Searching">
@@ -224,8 +218,15 @@
                                 </state>
                                 <connections>
                                     <action selector="startSearching:" destination="cVd-q4-vQr" eventType="touchUpInside" id="yJn-Tz-4Nn"/>
+                                    <segue destination="Qu9-VK-WnP" kind="show" id="ndV-Ue-8N8"/>
                                 </connections>
                             </button>
+                            <pickerView clipsSubviews="YES" contentMode="center" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EME-Az-Ab4">
+                                <rect key="frame" x="68" y="93" width="238" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="EME-Az-Ab4" secondAttribute="height" multiplier="61:53" id="1ly-fy-a46"/>
+                                </constraints>
+                            </pickerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -357,5 +358,114 @@
             </objects>
             <point key="canvasLocation" x="630" y="220"/>
         </scene>
+        <!--Search View Controller-->
+        <scene sceneID="R7L-fT-LSU">
+            <objects>
+                <viewController id="Qu9-VK-WnP" customClass="SearchViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8xK-PX-cZS"/>
+                        <viewControllerLayoutGuide type="bottom" id="GNh-JW-7nz"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cxB-Jx-PSY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fBQ-6B-LqX">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Title" id="oMk-uR-3gX">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="Np9-Kw-rDu">
+                                            <connections>
+                                                <segue destination="cVd-q4-vQr" kind="show" id="PLP-dG-uvE"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDL-ha-gJa">
+                                <rect key="frame" x="164" y="90" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1gl-o5-c5d">
+                                <rect key="frame" x="164" y="152" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lwx-Np-bYT">
+                                <rect key="frame" x="164" y="214" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HnX-lr-PIa">
+                                <rect key="frame" x="164" y="273" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2A-du-fvR">
+                                <rect key="frame" x="164" y="333" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9bU-XJ-CiP">
+                                <rect key="frame" x="164" y="392" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2d7-5f-Aj0">
+                                <rect key="frame" x="164" y="447" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cSr-aa-RYK">
+                                <rect key="frame" x="164" y="500" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dr6-va-cO2">
+                                <rect key="frame" x="164" y="556" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lw3-VV-nZx">
+                                <rect key="frame" x="164" y="608" width="46" height="30"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="result1" destination="QDL-ha-gJa" id="gj1-Z9-Ubr"/>
+                        <outlet property="result10" destination="lw3-VV-nZx" id="8d6-uh-eeA"/>
+                        <outlet property="result2" destination="1gl-o5-c5d" id="MC8-Z3-I6A"/>
+                        <outlet property="result3" destination="Lwx-Np-bYT" id="Ai8-42-lfn"/>
+                        <outlet property="result4" destination="HnX-lr-PIa" id="Ufh-1T-zzb"/>
+                        <outlet property="result5" destination="x2A-du-fvR" id="u9N-MB-Ug7"/>
+                        <outlet property="result6" destination="9bU-XJ-CiP" id="AcE-jf-ooK"/>
+                        <outlet property="result7" destination="2d7-5f-Aj0" id="HZv-hv-rfT"/>
+                        <outlet property="result8" destination="cSr-aa-RYK" id="p0Q-ga-qTU"/>
+                        <outlet property="result9" destination="dr6-va-cO2" id="ov6-Y2-vqi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IZo-JP-P88" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1011.5" y="219.5"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="PLP-dG-uvE"/>
+    </inferredMetricsTieBreakers>
 </document>
